--- a/Day1/day1.Rmd
+++ b/Day1/day1.Rmd
@@ -4,6 +4,7 @@ output: html_notebook
 ---
 
 This is the first day of the R course
+
 ```{r}
 library("readxl")
 library("tidyverse")
@@ -20,9 +21,8 @@ library("psych")
 ```{r}
 basedatos <- read_excel("PersonasConNegocios_ENIGH2022.xlsx")
 ```
-Recodificacion de la variable
- usando ifelse
- yo pensaba usar un casewhen lol (luego voy a intentar hacer esto con tidyverse)
+
+Recodificacion de la variable usando ifelse yo pensaba usar un casewhen lol (luego voy a intentar hacer esto con tidyverse)
 
 ```{r}
 basedatos$tamano <- as.factor(ifelse(basedatos$Numero_Empleados=='1 a 9',1,
@@ -40,9 +40,7 @@ summary(tamano)
 table(Numero_Empleados)
 ```
 
-PRUEBAS DE NORMALIDAD
-Tiempo laborando en anios
-B1P02B06A
+PRUEBAS DE NORMALIDAD Tiempo laborando en anios B1P02B06A
 
 ```{r}
 basedatos$datos_normales<-rnorm(10954)
@@ -57,8 +55,8 @@ legend('topleft', legend=c('Normal', 'TIEMPO LABORANDO AÑOS'),
        lwd=3, col=c('blue', 'red'), bty='n') #esto me edita la grafica
 ```
 
-
 graficando en qqplot
+
 ```{r}
 qqnorm(datos_normales, pch=20,
        main='QQplot Datos normales')
@@ -71,12 +69,9 @@ qqnorm(B1P02B06A, pch=20,
 qqline(B1P02B06A)
 ```
 
-HIPOTESIS
- H0: La muestra proviene de una distribución normal.
- H1: La muestra no proviene de una distribución normal.
+HIPOTESIS H0: La muestra proviene de una distribución normal. H1: La muestra no proviene de una distribución normal.
 
-Para pruebas de normalidad siempre se plantean así las hipótesis.
-Pruebas de Normalidad del Paquete “nortest”
+Para pruebas de normalidad siempre se plantean así las hipótesis. Pruebas de Normalidad del Paquete "nortest"
 
 Prueba de Anderson-Darling
 
@@ -85,8 +80,7 @@ ad.test(B1P02B06A)
 ad.test(datos_normales)
 ```
 
-Prueba de Cramer-von Mises###
-  Es útil para pequeñas muestras y usa los momentos como criterio.###
+Prueba de Cramer-von Mises### Es útil para pequeñas muestras y usa los momentos como criterio.###
 
 ```{r}
 cvm.test(B1P02B06A)
@@ -100,8 +94,7 @@ lillie.test(B1P02B06A)
 lillie.test(datos_normales)
 ```
 
-Prueba de Pearson chi-square###
-   basada en una distribución Ji cuadrado y que corresponde a una prueba de bondad de ajuste.
+Prueba de Pearson chi-square### basada en una distribución Ji cuadrado y que corresponde a una prueba de bondad de ajuste.
 
 ```{r}
 pearson.test(B1P02B06A)
@@ -115,46 +108,32 @@ sf.test(B1P02B06A[1:5000])
 sf.test(datos_normales[1:5000])
 ```
 
-Pruebas de Normalidad del Paquete “moments”
-   Prueba de Agostino###
+Pruebas de Normalidad del Paquete "moments" Prueba de Agostino###
+
 ```{r}
 agostino.test(B1P02B06A)
 agostino.test(datos_normales)
 ```
 
-Funciones incluidas en los paquetes básicos de R.
-   Prueba de Shapiro-Wilk###
-   Es más poderosa cuando se compara con otras pruebas de normalidad cuando la muestra es pequeña.
+Funciones incluidas en los paquetes básicos de R. Prueba de Shapiro-Wilk### Es más poderosa cuando se compara con otras pruebas de normalidad cuando la muestra es pequeña.
+
 ```{r}
 shapiro.test(B1P02B06A[1:5000])
 shapiro.test(datos_normales[1:5000])
 ```
 
+TEST DE HIPOTESIS PARA MEDIAS UNIVARIABLES se puede separar en parametrico y no parametrico H0: mu=a H1: mu distinto de a
 
-TEST DE HIPOTESIS PARA MEDIAS UNIVARIABLES
- se puede separar en parametrico y no parametrico
- H0: mu=a
- H1: mu distinto de a
+H0: mu<a
+ H1: mu>a \*\*no es necesario que sea mayor o igual, esto es porque es una dist continua (dijo que venia de la t-student), porque me quedaria solamente un punto y el area bajo la curva del punto es cero.
 
- H0: mu<a
- H1: mu>a
- **no es necesario que sea mayor o igual, esto es porque es una dist continua (dijo que venia de la t-student), porque me quedaria solamente un punto y el area bajo la curva del punto es cero.
+H0: mu\>a H0: mu\<a
 
-
- H0: mu>a
- H0: mu<a
- 
-*la conclusion es la misma pero el numero no va a ser el mismo numero, son tres formas de plantear el problema
-
-
+\*la conclusion es la misma pero el numero no va a ser el mismo numero, son tres formas de plantear el problema
 
 pvalor es la probabilidad que H0 sea verdad
 
-
-
-
-Paired sample T-test
- Este es un procedimiento estadístico que se utiliza para determinar si la diferencia media entre dos conjuntos de observaciones es cero. En una prueba t de muestras pareadas, cada sujeto se mide dos veces, lo que da como resultado pares de observaciones.
+Paired sample T-test Este es un procedimiento estadístico que se utiliza para determinar si la diferencia media entre dos conjuntos de observaciones es cero. En una prueba t de muestras pareadas, cada sujeto se mide dos veces, lo que da como resultado pares de observaciones.
 
 ```{r}
 # promedio Años trabajando
@@ -172,8 +151,7 @@ t.test(B1P02B06A, B1P00A03, alternative='greater',conf.level = 0.95)
 t.test(B1P02B06A, B1P00A03, alternative='less',conf.level = 0.95)
 ```
 
-Paired Samples Wilcoxon Test
- La prueba de Wilcoxon para muestras pareadas es una alternativa no paramétrica a la prueba t pareada utilizada para comparar datos pareados. Se utiliza cuando los datos no se distribuyen normalmente.
+Paired Samples Wilcoxon Test La prueba de Wilcoxon para muestras pareadas es una alternativa no paramétrica a la prueba t pareada utilizada para comparar datos pareados. Se utiliza cuando los datos no se distribuyen normalmente.
 
 ```{r}
 # promedio Años trabajando
@@ -191,11 +169,7 @@ wilcox.test(B1P02B06A, B1P00A03, alternative='greater',conf.level = 0.99)
 wilcox.test(B1P02B06A, B1P00A03, alternative='less',conf.level = 0.99)
 ```
 
-
-
-
-
-**Hay que replicar el no parametrico para las variales que terminan en B1P02B24 y B1P02B25
+\*\*Hay que replicar el no parametrico para las variales que terminan en B1P02B24 y B1P02B25
 
 ```{r}
 mean(B1P02B24)
@@ -205,34 +179,23 @@ mean(B1P02B24)
 mean(B1P02B25)
 ```
 
-
 ```{r}
 wilcox.test(B1P02B24, B1P02B25, alternative='two.sided',conf.level = 0.99)
 wilcox.test(B1P02B24, B1P02B25, alternative='greater',conf.level = 0.99)
 wilcox.test(B1P02B24, B1P02B25, alternative='less',conf.level = 0.99)
 ```
 
-________________________________________________________________________________
+------------------------------------------------------------------------
+
 Comparación de las medias de más de dos grupos
 
 Existen principalmente dos técnicas que se utilizan para comparar la media de una muestra con una media estándar conocida. Estas dos técnicas son:
 
-Analysis of Variance (ANOVA)
-# One way ANOVA
-# Two way ANOVA
-# MANOVA Test
+Analysis of Variance (ANOVA) \# One way ANOVA \# Two way ANOVA \# MANOVA Test
 
-One way ANOVA
- El análisis de varianza unidireccional (ANOVA), también conocido como ANOVA de un factor, es una extensión de la prueba t de dos muestras independientes para comparar medias en una situación en la que hay más de dos grupos. En ANOVA unidireccional, los datos se organizan en varios grupos basados en una única variable de agrupación.
+One way ANOVA El análisis de varianza unidireccional (ANOVA), también conocido como ANOVA de un factor, es una extensión de la prueba t de dos muestras independientes para comparar medias en una situación en la que hay más de dos grupos. En ANOVA unidireccional, los datos se organizan en varios grupos basados en una única variable de agrupación.
 
-
-Creando variable tamaño de empresa
-El tamaño de la empresa: para esto puedes construir una variable categórica con las siguientes categorías: 
-# 0= No sabe
-# 1= Micro empresa (1 a 9 trabajadores); 
-# 2=Pequeña (10 a 99); 
-# 3=Mediana (100 a 199)
-# 4= Grande (+200).
+Creando variable tamaño de empresa El tamaño de la empresa: para esto puedes construir una variable categórica con las siguientes categorías: \# 0= No sabe \# 1= Micro empresa (1 a 9 trabajadores); \# 2=Pequeña (10 a 99); \# 3=Mediana (100 a 199) \# 4= Grande (+200).
 
 ```{r}
 basedatos$tamano <- as.factor(ifelse(basedatos$Numero_Empleados == '1 a 9', 1,
@@ -245,27 +208,29 @@ table(Numero_Empleados)
 ```
 
 # anova de B1P02B08: SUELDO O SALARIO MENSUAL
+
 # con tamano
+
 ```{r}
 anova_1 <- aov(B1P02B08 ~ factor(tamano))
 anova_1
 #print(summary(anova_1))
 ```
+
 ```{r}
 describeBy(B1P02B08,tamano) #eso me saca como que la descripcion pero hace un df por cada grupo que genera
 ```
 
-
 # Tukey's Test
+
 ```{r}
-tukey.test_1<-TukeyHSD(anova_1)
+tukey.test_1 <-TukeyHSD(anova_1)
 tukey.test_1
 ```
 
 ```{r}
 plot(tukey.test_1)
 ```
-
 
 ```{r}
 basedatos$trabajos <- as.factor(ifelse(basedatos$B1P02B01 == 'UN SOLO TRABAJO', 1,
@@ -274,7 +239,6 @@ attach(basedatos)
 table(B1P02B01)
 table(trabajos)
 ```
-
 
 ```{r}
 # anova de B1P02B08: SUELDO O SALARIO MENSUAL
@@ -298,15 +262,20 @@ tukey.test_2
 plot(tukey.test_2)
 ```
 
-
 # Two way ANOVA
-# La prueba ANOVA de dos vías se usa para evaluar 
-# simultáneamente el efecto de dos variables de 
-# agrupación (A y B) en una variable de respuesta. 
-# Toma en consideración dos grupos categóricos.
 
-# anova de B1P02B06A: Ingresos por venta de bienes o servicios 2016
-# con innovacion y tamano juntos
+La prueba ANOVA de dos vías se usa para evaluar
+
+simultáneamente el efecto de dos variables de
+
+agrupación (A y B) en una variable de respuesta.
+
+Toma en consideración dos grupos categóricos.
+
+anova de B1P02B06A: Ingresos por venta de bienes o servicios 2016
+
+con innovacion y tamano juntos
+
 ```{r}
 anova_3 <- aov(B1P02B06A ~ factor(trabajos)*factor(tamano))
 print(summary(anova_3))
@@ -314,13 +283,7 @@ print(summary(anova_3))
 
 ```{r}
 # Tukey's Test
-tukey.test_3<-TukeyHSD(anova_3)
+tukey.test_3 <-TukeyHSD(anova_3)
 tukey.test_3
 plot(tukey.test_3)
 ```
-
-
-
-
-
-
