--- a/Day2/Day2.Rmd
+++ b/Day2/Day2.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "R Notebook"
 output: html_notebook
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
-
 
 ```{r}
 library("readxl")
@@ -19,13 +21,12 @@ library("openxlsx")
 
 ```
 
-
 ```{r}
 basedatos <- read_excel("PersonasConNegocios_ENIGH2022.xlsx")
 ```
 
+------------------------------------------------------------------------
 
-________________________________________________________________________________
 REGRESIONES LINEALES
 
 ```{r}
@@ -34,12 +35,12 @@ anova(modelo_1_salario)
 summary(modelo_1_salario)
 ```
 
+Se va a bucar obtener un modelo para analizar el sueldo y como la edad
+determina el sueldo, la edad es la variable independiente y el salario
+la variable dependiente
 
-Se va a bucar obtener un modelo para analizar el sueldo y como la edad determina el sueldo, la edad es la variable independiente y el salario la variable dependiente
-
-Aqui se quiere un modelo para el salario en funcion del nivel de escolaridad
-nivel educativo B1P00B07A
-
+Aqui se quiere un modelo para el salario en funcion del nivel de
+escolaridad nivel educativo B1P00B07A
 
 ```{r}
 datatest <- basedatos %>% select(B1P00B07A, B1P02B08) %>%
@@ -52,12 +53,12 @@ datatest <- basedatos %>% select(B1P00B07A, B1P02B08) %>%
 plot(datatest$niveleduc,datatest$B1P02B08, xlab='Nivel educ', ylab='Salario', main="Grafica de puntos: Salario en funcion de nivel educ")
 ```
 
-
 ```{r}
 plot(datatest$nivel5,datatest$B1P02B08, xlab='Nivel educ', ylab='Salario', main="Grafica de puntos: Salario en funcion de nivel educ")
 ```
 
 Tomando todos los niveles
+
 ```{r}
 mod01 <- lm(datatest$B1P02B08 ~ datatest$niveleduc)
 anova(mod01)
@@ -65,14 +66,15 @@ summary(mod01)
 ```
 
 Solo para el nivel 5
+
 ```{r}
 mod02 <- lm(datatest$B1P02B08 ~ datatest$nivel5)
 anova(mod02)
 summary(mod02)
 ```
-si nos preguntamos cuanto mas gana el nivel 5 respecto a todos los demas niveles, serian 3243
 
-
+si nos preguntamos cuanto mas gana el nivel 5 respecto a todos los demas
+niveles, serian 3243
 
 ```{r}
 library("nortest") ###REALIZA 5 PRUEBAS DE NORMALIDAD###
@@ -87,32 +89,24 @@ library("mfx")
 library("ggplot2")
 ```
 
+------------------------------------------------------------------------
 
-________________________________________________________________________________
 REGRESION MULTIPLE
 
-Se crea un nivel por cada variable
-El nivel 1 que era de menor importancia esta oculto en el intercepto
-En el ejemplo de este coso multiple la comparacion se hace respecto al nivel 1
+Se crea un nivel por cada variable El nivel 1 que era de menor
+importancia esta oculto en el intercepto En el ejemplo de este coso
+multiple la comparacion se hace respecto al nivel 1
 
+------------------------------------------------------------------------
 
+Cuando las variables dependientes no son continuas se tienen modelos no
+lineales, binarias o ficticias, 01 se puede usar un modelo de regresion
+pero carece de interpretacion
 
-
-
-
-________________________________________________________________________________
-
-Cuando las variables dependientes no son continuas se tienen modelos no lineales, binarias o ficticias, 01
-se puede usar un modelo de regresion pero carece de interpretacion
-
-
-
-Se va a ver el salario con nivel educacional
-en estos casos se toma la mediana ya que la media es muy sensible a los valores extremos
-*** se usan salarios altos y bajos
-    alto > a la mediana
-    bajo < a la mediana
-modelos tobit -> variables cargadas a uno d elos dos lados
+Se va a ver el salario con nivel educacional en estos casos se toma la
+mediana ya que la media es muy sensible a los valores extremos \*\*\* se
+usan salarios altos y bajos alto \> a la mediana bajo \< a la mediana
+modelos tobit -\> variables cargadas a uno d elos dos lados
 
 ```{r}
 #mediansalary <- 
@@ -122,23 +116,16 @@ median(basedatos$B1P02B08)
 #}
 ```
 
-
-
-
-
-con logit y probit
-analizar genero por salario, edad (separando menores y mayores de edad), tamano de empresa (efectos agrupados y luego desagrupados, ie una unica variable que tenga los 5, y todas las variables posibles)
-
-
-
+con logit y probit analizar genero por salario, edad (separando menores
+y mayores de edad), tamano de empresa (efectos agrupados y luego
+desagrupados, ie una unica variable que tenga los 5, y todas las
+variables posibles)
 
 # Sexo (mujeres) versus Edad, Salario, Tamaño de empresa (quiere decir que la variable que mayor interes aca son las mujeres)
-variable dpendiente: sexo
-sexo: B1P00A02 (mujer y hombre)
-edad: B1P00A03 (media y dividimos)
-salario: B1P02B08 (solo salario)
-tamano empresa: tiene que ver con el numero de empleados (con los tamanos de antes)
 
+variable dpendiente: sexo sexo: B1P00A02 (mujer y hombre) edad: B1P00A03
+(media y dividimos) salario: B1P02B08 (solo salario) tamano empresa:
+tiene que ver con el numero de empleados (con los tamanos de antes)
 
 ```{r}
 #funcion para poner sexo a dos niveles
@@ -156,7 +143,6 @@ ftamano <- function(x){
 }
 ```
 
-
 ```{r}
 base <- basedatos %>% 
   select(B1P00A02, B1P00A03, B1P02B08, Numero_Empleados) %>% 
@@ -166,7 +152,6 @@ base <- basedatos %>%
   mutate('tamano' = ftamano(Numero_Empleados))
 ```
 
-
 ```{r}
 reg_logit = glm(genero~ edad+salario+tamano, data=base, family=binomial(link='logit'))
 summary(reg_logit)
@@ -174,7 +159,6 @@ precict_logit=predict(reg_logit, type='response')
 summary(precict_logit)
 estimaciones2 = reg_logit$fitted.values
 ```
-
 
 ```{r}
 # Regresgión logit
@@ -189,9 +173,3 @@ abline(a=0,b=0,col="red",lwd=2) # línea y=0
 marginal_logit<-logitmfx(formula = salario_alto~ nivel_educacional_2+nivel_educacional_3+nivel_educacional_4+nivel_educacional_5,  data = PersonasConNegocios_ENIGH2022)
 print(marginal_logit)
 ```
-
-
-
-
-
-
